--- a/1º website (netflix)/index.css
+++ b/1º website (netflix)/index.css
@@ -14,6 +14,9 @@
     background-size: cover;
 }
 .sombra{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     position: absolute;
     top: 0px;
     left: 0px;
@@ -23,8 +26,10 @@
 }
 /*menu*/
 .menu{
-    width: 100%;
+   width: 100%;
    position: absolute;
+   top: 0px;
+   left: 0px;
    height: 100px;
    display: flex;
    justify-content: center;
@@ -56,4 +61,73 @@
     padding: 10px 20px;
     border-radius: 7%;
     font-weight: 500;
+}
+/*centro da página*/
+.cadastro{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    color: white;
+}
+.cadastro > h1{
+    font-size: 50px ;
+}
+.cadastro > p:nth-child(2){
+    font-size: 25px;
+    margin: 10px 0px;
+}
+.cadastro > p:nth-child(3){
+    font-size: 20px;
+    margin: 10px 0px;
+}
+.btn-isncricao{
+    margin-top: 10px;
+    display: flex;
+}
+.isncricao{
+    position: relative;
+}
+.isncricao > input{
+    border: solid 1px rgb(115, 115, 115);
+    background-color: rgba(0, 0, 0, 0.555);
+    outline: none;
+    width: 400px;
+    height: 60px;
+    padding-top: 20px;
+    padding-left: 15px;
+    font-size: 25px;
+    border-radius: 6px;
+}
+.isncricao > input:hover{
+    outline: white solid 1px;
+}
+.isncricao > label{
+    font-size: 20px;
+    position: absolute;
+    top: 50%;
+    color: white;
+    transform: translateY(-50%);
+    left: 15px;
+    transition: 0.5s;
+    pointer-events: none;
+}
+.isncricao > input:focus~label,
+.isncricao > input:valid~label
+{
+    top: 12px;
+    font-size: 15px;
+}
+.btn-isncricao .btn{
+    background-color: rgb(189, 57, 57);
+    outline: none;
+    border: none;
+    color: white;
+    font-size: 27px;
+    padding: 0px 20px;
+    margin-left: 10px;
+    border-radius: 6px;
+    width: 180px;
+    cursor: pointer;
+    
 }
